--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,4 +7,7 @@ vscode:
     - ms-azuretools.vscode-docker
     - ms-python.python
 tasks:
-  - command: poetry shell
+  - before: source ${HOME}/.poetry/env
+    command: poetry shell
+    env:
+      PIP_USER: no
