Fix bad startup shell in GitPod.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,8 +6,5 @@ vscode:
     - ms-azuretools.vscode-docker
     - ms-python.python
 tasks:
-    - env:
-        PIP_USER: no
-        PATH: ${PATH}:${HOME}/.poetry/bin
-      before: . ${HOME}/.poetry/env && . /open-portfolio/venv/bin/activate
+    - before: . /open-portfolio/venv/bin/activate
       command: poetry shell
