--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["thomas-schweich <thomas.schweich@gmail.com>"]
 python = "^3.9"
 fastapi = {extras = ["all"], version = "^0.68.0"}
 uvicorn = "^0.13.4"
-SQLAlchemy = "^1.4.22"
+ormar = "^0.10.16"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
